package it.polimi.ingsw.server.rmi;

import it.polimi.ingsw.rmi.RmiGameController;

public class RmiGameServerController implements RmiGameController {
}
